Add GetCheck endpoint
